--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Mom-Son Company</title>
   <!-- CSS only -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/main.css">
   <link rel="icon" href="favicon.ico">
   <script src="https://kit.fontawesome.com/f20f44d9a0.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&family=Ubuntu&display=swap" rel="stylesheet">
